# C_Synchronization

./: .gitignore  CMakeLists.txt  readme.md  useful code.txt
Guide/: shm-posix-consumer.c  shm-posix-producer.c
Headers/: fin.h  init.h  log.h  main.h  mem.h  prod.h  spy.h
Headers/Util/: blckdplist.h  list.h  random.h  smemory.h  util.h
Sources/: fin.c  init.c  log.c  main.c  mem.c  prod.c  spy.c
Sources/Util/: blckdplist.c  list.c  random.c  smemory.c  util.c
